--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -15,7 +15,8 @@
     background: url("../images/bg-pattern-desktop.svg") no-repeat,
       linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
     background-size: cover;
-    width: 45%;
+    // main width = 42.5% + 5.5% + 7% = 55%
+    width: 42.5%;
     padding-left: 5.5%;
     padding-right: 7%;
   }
@@ -49,7 +50,7 @@
   }
 
   &__img {
-    width: 42.5%;
+    width: 45%;
     min-height: 100vh;
     background-image: url("../images/hero-desktop.jpg");
     background-size: cover;
@@ -100,8 +101,8 @@
     width: 2rem;
     position: absolute;
     top: 50%;
-    left: 70%;
-    transform: translate(-50%, -70%);
+    left: 65%;
+    transform: translate(-50%, -65%);
     display: none;
   }
 
